--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
-  "name": "archive-scaffold",
+  "name": "ukraine-archive",
   "license": "GPL-3.0",
   "author": "Christo <christo@cryptodrunks.net>",
-  "homepage": "https://github.com/critocrito/archive-scaffold#readme",
-  "repository": "https://github.com/critocrito/archive-scaffold.git",
+  "homepage": "https://github.com/critocrito/ukraine-archive#readme",
+  "repository": "https://github.com/critocrito/ukraine-archive.git",
   "scripts": {
     "fix": "yarn lint --fix",
     "lint:js": "eslint src/**/*.js",
