--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@sugarcube/cli": "0.14.0",
-    "@sugarcube/core": "^0.14.0",
-    "@sugarcube/plugin-elasticsearch": "0.14.0",
-    "@sugarcube/plugin-googlesheets": "0.14.0",
-    "@sugarcube/plugin-http": "0.14.0",
-    "@sugarcube/plugin-media": "0.14.0",
-    "@sugarcube/plugin-mongodb": "^0.14.0",
-    "@sugarcube/plugin-tap": "0.14.0",
-    "@sugarcube/plugin-twitter": "0.14.0",
-    "@sugarcube/plugin-workflow": "0.14.0",
-    "@sugarcube/plugin-youtube": "0.14.0",
+    "@sugarcube/cli": "0.15.0",
+    "@sugarcube/core": "0.15.0",
+    "@sugarcube/plugin-elasticsearch": "0.15.0",
+    "@sugarcube/plugin-googlesheets": "0.15.0",
+    "@sugarcube/plugin-http": "0.15.0",
+    "@sugarcube/plugin-media": "0.15.0",
+    "@sugarcube/plugin-mongodb": "0.15.0",
+    "@sugarcube/plugin-tap": "0.15.0",
+    "@sugarcube/plugin-twitter": "0.15.0",
+    "@sugarcube/plugin-workflow": "0.15.0",
+    "@sugarcube/plugin-youtube": "0.15.0",
     "sugarcube-plugin-scrub": "file:./src/js/plugin-scrub-fields"
   },
   "devDependencies": {
