--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sugarcube/plugin-elasticsearch": "0.15.0",
     "@sugarcube/plugin-googlesheets": "0.15.0",
     "@sugarcube/plugin-http": "0.15.0",
+    "@sugarcube/plugin-mail": "^0.15.0",
     "@sugarcube/plugin-media": "0.15.0",
     "@sugarcube/plugin-mongodb": "0.15.0",
     "@sugarcube/plugin-tap": "0.15.0",
