feat: annotate observations with cid metadata

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@sugarcube/plugin-twitter": "0.16.0",
     "@sugarcube/plugin-workflow": "0.16.0",
     "@sugarcube/plugin-youtube": "0.16.0",
+    "date-fns": "^1.29.0",
     "dms-conversion": "^3.1.1",
+    "sugarcube-plugin-cid": "file:./src/js/plugin-cid",
     "sugarcube-plugin-scrub": "file:./src/js/plugin-scrub-fields"
   },
   "devDependencies": {
