--- a/systemd/youtube-videos-scrapes@.service
+++ b/systemd/youtube-videos-scrapes@.service
@@ -4,6 +4,9 @@ OnFailure=status-email-archive@%n.service
 
 [Service]
 Type=oneshot
-ExecStart=/home/%i/%i-archive/bin/youtube-videos.sh
+ExecStart=/bin/sh /home/%i/%i-archive/bin/youtube-videos.sh
 User=%i
 WorkingDirectory=/home/%i/%i-archive
+
+[Install]
+RequiredBy=default.target
