--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@sugarcube/cli": "0.18.0",
-    "@sugarcube/core": "0.18.0",
-    "@sugarcube/plugin-elasticsearch": "0.18.0",
-    "@sugarcube/plugin-googlesheets": "0.18.0",
-    "@sugarcube/plugin-http": "0.18.0",
-    "@sugarcube/plugin-mail": "^0.18.0",
-    "@sugarcube/plugin-media": "0.18.0",
-    "@sugarcube/plugin-mongodb": "0.18.0",
-    "@sugarcube/plugin-tap": "0.18.0",
-    "@sugarcube/plugin-twitter": "0.18.0",
-    "@sugarcube/plugin-workflow": "0.18.0",
-    "@sugarcube/plugin-youtube": "0.18.0",
+    "@sugarcube/cli": "0.19.0",
+    "@sugarcube/core": "0.19.0",
+    "@sugarcube/plugin-elasticsearch": "0.19.0",
+    "@sugarcube/plugin-googlesheets": "0.19.0",
+    "@sugarcube/plugin-http": "0.19.0",
+    "@sugarcube/plugin-mail": "0.19.0",
+    "@sugarcube/plugin-media": "0.19.0",
+    "@sugarcube/plugin-mongodb": "0.19.0",
+    "@sugarcube/plugin-tap": "0.19.0",
+    "@sugarcube/plugin-twitter": "0.19.0",
+    "@sugarcube/plugin-workflow": "0.19.0",
+    "@sugarcube/plugin-youtube": "0.19.0",
     "date-fns": "^1.29.0",
     "dms-conversion": "^3.1.1",
     "node-fetch": "^2.3.0",
