--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@sugarcube/cli": "0.19.0",
     "@sugarcube/core": "0.19.0",
+    "@sugarcube/plugin-csv": "0.19.0",
     "@sugarcube/plugin-elasticsearch": "0.19.0",
     "@sugarcube/plugin-googlesheets": "0.19.0",
     "@sugarcube/plugin-http": "0.19.0",
