--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@sugarcube/cli": "0.19.0",
     "@sugarcube/core": "0.19.0",
     "@sugarcube/plugin-csv": "0.19.0",
-    "@sugarcube/plugin-elasticsearch": "0.19.0",
+    "@sugarcube/plugin-elasticsearch": "0.19.2",
     "@sugarcube/plugin-googlesheets": "0.19.0",
     "@sugarcube/plugin-http": "0.19.0",
     "@sugarcube/plugin-mail": "0.19.1",
@@ -30,6 +30,7 @@
     "node-fetch": "^2.3.0",
     "sugarcube-plugin-cid": "file:./src/js/plugin-cid",
     "sugarcube-plugin-enigio": "file:./src/js/plugin-enigio",
+    "sugarcube-plugin-query": "file:./src/js/plugin-query",
     "sugarcube-plugin-scrub": "file:./src/js/plugin-scrub-fields"
   },
   "devDependencies": {
