--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sugarcube/plugin-youtube": "0.23.0",
     "date-fns": "^1.29.0",
     "dms-conversion": "^3.1.1",
+    "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
     "sugarcube-plugin-cid": "file:./src/js/plugin-cid",
     "sugarcube-plugin-enigio": "file:./src/js/plugin-enigio",
